# kanburi

./: .mise.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.module.css  App.tsx  global.css  main.tsx  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  markdown.rs  models.rs
src/components/: AddTaskInput.module.css  AddTaskInput.tsx  CardMenu.module.css  CardMenu.tsx  ColumnHeader.module.css  ColumnHeader.tsx  DateBadge.module.css  DateBadge.tsx  DateLabel.module.css  DateLabel.tsx  DatePicker.module.css  DatePicker.tsx  DeleteButton.module.css  DeleteButton.tsx  DescriptionInput.module.css  DescriptionInput.tsx  ExpandArea.module.css  ExpandArea.tsx  KanbanCard.module.css  KanbanCard.tsx  KanbanColumn.module.css  KanbanColumn.tsx  LabelBadge.module.css  LabelBadge.tsx  LabelEditor.module.css  LabelEditor.tsx  PopupMenu.module.css  PopupMenu.tsx  StatusButton.module.css  StatusButton.tsx  Title.module.css  Title.tsx  WelcomeScreen.module.css  WelcomeScreen.tsx
src/context/: BoardContext.tsx  kanbanReducer.test.ts  kanbanReducer.ts  uiReducer.test.ts  uiReducer.ts  useBoard.test.ts
src/hooks/: testUtils.tsx  useAddTask.test.ts  useAddTask.ts  useBoard.test.ts  useBoard.ts  useBoardStore.ts  useColumns.test.ts  useColumns.ts  useComposing.test.ts  useComposing.ts  useDragDrop.ts  useTasks.ts  (+6 more)
